# SpriteChatShared

./: .clang-format  .gitignore  CMakeLists.txt  spritechatshared_global.h
assets/: mount.cpp  mount.h  mountaccess.cpp  mountaccess.h
src/: spritechatshared_global.h
src/assets/: mount.cpp  mount.h  mountaccess.cpp  mountaccess.h
src/datatypes/: animationtypes.h  areatypes.cpp  areatypes.h  assettypes.h  coordinatortypes.h  loadingtypes.h  musictypes.h  servertypes.h  sockettypes.h
src/network/: abstractpacket.h  coordinatoradvertiser.cpp  coordinatoradvertiser.h  coordinatorclient.cpp  coordinatorclient.h  packet.h  packetfactory.cpp  packetfactory.h  packetrouter.cpp  packetrouter.h  serverclient.cpp  serverclient.h  serverrouter.cpp  serverrouter.h  serversocket.cpp  serversocket.h  socketinterface.h
src/network/packets/: abstractpacket.h  backgroundpacket.cpp  backgroundpacket.h  characterpacket.cpp  characterpacket.h  charlistpacket.cpp  charlistpacket.h  charlisttakenpacket.cpp  charlisttakenpacket.h  chatpacket.cpp  chatpacket.h  hellopacket.cpp  hellopacket.h  locationlistpacket.cpp  locationlistpacket.h  locationpacket.cpp  locationpacket.h  musiclistpacket.cpp  musiclistpacket.h  musicpacket.cpp  musicpacket.h  notificationpacket.cpp  notificationpacket.h  packetfactory.cpp  packetfactory.h  packetrouter.cpp  packetrouter.h  selectcharacterpacket.cpp  selectcharacterpacket.h  selectlocationpacket.cpp  selectlocationpacket.h  selectmusicpacket.cpp  selectmusicpacket.h  serverhellopacket.cpp  serverhellopacket.h  setsidepacket.cpp  setsidepacket.h  sidelistpacket.cpp  sidelistpacket.h  viewportpacket.cpp  (+1 more)
src/network/socket/: serversocket.cpp  serversocket.h  socketinterface.cpp  socketinterface.h
src/viewport/: abstractanimationevent.h
test/: testmount.cpp  testmount.h
testbin/: file_content.txt  other_file_content.txt  second_archive_data.txt
